--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "grunt-shell": "~0.7.0",
     "grunt-contrib-jasmine": "~0.6.4",
     "browserify": "~4.1.5",
-    "grunt-browserify": "~2.1.0"
+    "grunt-browserify": "~2.1.0",
+    "lodash": "~2.4.1",
+    "jquery": "~2.1.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "q": "~1.0.1"
   }
 }
