--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "~2.4.1",
     "jquery": "~2.1.1",
     "grunt-contrib-copy": "~0.5.0",
-    "q": "~1.0.1"
+    "q": "~1.0.1",
+    "handlebars": "~2.0.0-alpha.4"
   }
 }
