--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "~2.1.1",
     "grunt-contrib-copy": "~0.5.0",
     "q": "~1.0.1",
-    "handlebars": "~2.0.0-alpha.4"
+    "handlebars": "~2.0.0-alpha.4",
+    "moment": "~2.6.0"
   }
 }
