--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jquery": "~2.1.1",
     "grunt-contrib-copy": "~0.5.0",
     "q": "~1.0.1",
-    "handlebars": "~2.0.0-alpha.4",
-    "moment": "~2.6.0"
+    "handlebars": "~1.3.0",
+    "moment": "~2.6.0",
+    "hbsfy": "~1.3.2"
   }
 }
