made some changes to work on any domain, and improvements to loading epics

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 
 	"content_scripts": [
 		{
-		  "matches": ["https://jbrunton.atlassian.net/secure/RapidBoard.jspa?*view=reporting*"],
+		  "matches": ["https://*/secure/RapidBoard.jspa?*view=reporting*"],
 			"js": ["main.js"]
 		}
 	]
