--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "q": "~1.0.1",
     "handlebars": "~1.3.0",
     "moment": "~2.6.0",
-    "hbsfy": "~1.3.2"
+    "hbsfy": "~1.3.2",
+    "rosie": "~0.3.1"
   }
 }
