--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "handlebars": "~1.3.0",
     "moment": "~2.6.0",
     "hbsfy": "~1.3.2",
-    "rosie": "~0.3.1"
+    "rosie": "~0.3.1",
+    "d3": "~3.4.8"
   }
 }
