--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "~2.6.0",
     "hbsfy": "~1.3.2",
     "rosie": "~0.3.1",
-    "d3": "~3.4.8"
+    "d3": "~3.4.8",
+    "seedrandom": "~2.3.6"
   }
 }
